--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 	font-family: Norse-Bold;
 	src: url("Fonts/Norse-Bold.otf");
 }
+html {
+	--forest-green: #596d48;
+	--light-border: #e5e7eb;
+}
 body {
 	width: 100vw;
 	height: 100vh;
@@ -11,29 +15,60 @@ body {
 
 main {
 	display: flex;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .left-container {
-	width: 60vw;
+	width: 40vw;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-    align-items: center;
 	height: 100vh;
-
 	background-image: url("jean-philippe-delberghe.jpg");
 	background-repeat: no-repeat;
-    background-position: center;
-	background-color: #cccccc;
-    background-size: cover; 
+	background-position: center;
+	background-size: cover;
+	flex: 1; 
+	color: white;
+	align-items: center;
 }
 .right-container {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	height: 100vh;
+	width: 60vw; 
 }
-.logo {
+.logoText {
 	font-family: "Norse-Bold", sans-serif;
+	font-size: 4rem;
+}
+.logoContainer {
+	display: flex;
+	flex-direction: row;
+	position: relative;
+	top: 8rem; 
+	background: black;
+	opacity: 0.6;
+	height: 15vh;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+}
+
+.odinLogo {
+	height: 70%;
+}
+.credit {
+	position: absolute;
+	bottom: 0.5rem;
+	font-size: 0.7rem;
+}
+
+button {
+	background-color: var(--forest-green);
+}
+
+p{
+	
 }
