--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ main {
 		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.left-container {
+.leftContainer {
 	width: 40vw;
 	display: flex;
 	flex-direction: column;
@@ -28,16 +28,20 @@ main {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-	flex: 1; 
+	flex: 1;
 	color: white;
 	align-items: center;
 }
-.right-container {
+.rightContainer {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	height: 100vh;
-	width: 60vw; 
+	width: 60vw;
+}
+.formDescription,
+.formFooter {
+	padding: 3rem;
 }
 .logoText {
 	font-family: "Norse-Bold", sans-serif;
@@ -47,7 +51,7 @@ main {
 	display: flex;
 	flex-direction: row;
 	position: relative;
-	top: 8rem; 
+	top: 8rem;
 	background: black;
 	opacity: 0.6;
 	height: 15vh;
@@ -64,11 +68,57 @@ main {
 	bottom: 0.5rem;
 	font-size: 0.7rem;
 }
-
-button {
-	background-color: var(--forest-green);
+p,
+.formHeader {
+	font-weight: bold;
+}
+a {
+	appearance: none;
+	color: var(--forest-green);
 }
 
-p{
-	
+/* form styling */
+button {
+	background-color: var(--forest-green);
+	border: 2px solid var(--forest-green);
+	margin-bottom: 2em;
+	width: 11em;
+	border-radius: 5px;
+	font-family: inherit;
+	font-size: 100%;
+	color: white;
+}
+
+input {
+	border: 2px solid #000;
+	margin-bottom: 15px;
+	padding: 5px;
+	border-radius: 5px;
+	font-family: inherit;
+	font-size: 100%;
+}
+
+input:invalid {
+	border-color: red;
+}
+
+input:valid {
+	border-color: green;
+}
+
+div.shadowContainer {
+	display: grid;
+	grid-gap: 10px;
+	grid-template-columns: repeat(2, 15rem);
+
+	grid-auto-rows: minmax(2em, auto);
+	box-sizing: border-box;
+	width: 100%;
+	padding-left: 3em;
+	/* offset-x | offset-y | blur-radius | color */
+	box-shadow: -8px 0 8px var(--light-border);
+}
+h2 {
+	grid-column: 1/3;
+	grid-row: 1;
 }
