--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 html {
 	--forest-green: #596d48;
 	--light-border: #e5e7eb;
+	--right-padding: 2rem;
+	box-sizing: border-box;
 }
 body {
 	width: 100vw;
@@ -20,7 +22,7 @@ main {
 }
 
 .leftContainer {
-	width: 40vw;
+	width: 30vw;
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
@@ -37,11 +39,7 @@ main {
 	flex-direction: column;
 	justify-content: center;
 	height: 100vh;
-	width: 60vw;
-}
-.formDescription,
-.formFooter {
-	padding: 3rem;
+	width: 70vw;
 }
 .logoText {
 	font-family: "Norse-Bold", sans-serif;
@@ -87,38 +85,52 @@ button {
 	font-family: inherit;
 	font-size: 100%;
 	color: white;
+	padding: 0.5rem;
 }
 
 input {
-	border: 2px solid #000;
-	margin-bottom: 15px;
-	padding: 5px;
+	border: 2px solid var(--light-border);
+	flex: 1;
+	padding: 0.5em;
 	border-radius: 5px;
 	font-family: inherit;
 	font-size: 100%;
+	width: 90%;
 }
 
-input:invalid {
-	border-color: red;
-}
-
-input:valid {
-	border-color: green;
+input:focus {
+	outline: none;
+	border-color: blue;
 }
 
 div.shadowContainer {
-	display: grid;
-	grid-gap: 10px;
-	grid-template-columns: repeat(2, 15rem);
-
-	grid-auto-rows: minmax(2em, auto);
-	box-sizing: border-box;
-	width: 100%;
-	padding-left: 3em;
+	padding: var(--right-padding);
 	/* offset-x | offset-y | blur-radius | color */
 	box-shadow: -8px 0 8px var(--light-border);
 }
-h2 {
-	grid-column: 1/3;
-	grid-row: 1;
+div.gridContainer {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 10px;
+	grid-auto-rows: minmax(auto, auto);
+	width: 35vw;
+}
+
+.formDescription,
+.formFooter {
+	padding: var(--right-padding);
+}
+/* This is the style of our error messages */
+span.errorMessage {
+	width: 100%;
+	padding: 0;
+	flex-wrap: nowrap;
+	font-size: 80%;
+	color: #900;
+}
+.error.active {
+	padding: 0.3em;
+}
+.invalid {
+	border-color: #900;
 }
