implemented form validation logic preventing the user from submitting if inputs are invalid

--- a/style.css
+++ b/style.css
@@ -104,6 +104,10 @@ input:focus {
 	border-color: blue;
 }
 
+input:invalid:focus {
+	border: 2px solid red; 
+}
+
 div.shadowContainer {
 	padding: var(--right-padding);
 	/* offset-x | offset-y | blur-radius | color */
