--- a/style.css
+++ b/style.css
@@ -8,26 +8,28 @@ html {
 	--button-background: #4b6e2e;
 	--padding: 2em;
 	--invalid: #900;
-	box-sizing: border-box;
-}
-body {
-	width: 100vw;
-	height: 100vh;
-	margin: 0;
-	padding: 0;
-}
-
-main {
-	display: flex;
+	/* box-sizing: border-box; */
+	overflow: hidden;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-
-.leftContainer {
-	width: 30vw;
+body {
+	margin: 0;
+	padding: 0;
+	width: 100vw;
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+}
+main {
+	display: flex;
+	flex-direction: row;
+	flex: 1;
+}
+
+.leftContainer {
+	display: flex;
+	flex-direction: column;
 	background-image: url("jean-philippe-delberghe.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
@@ -38,10 +40,9 @@ main {
 }
 .rightContainer {
 	display: flex;
+	flex: 2;
 	flex-direction: column;
 	justify-content: center;
-	height: 100vh;
-	width: 70vw;
 }
 .logoText {
 	font-family: "Norse-Bold", sans-serif;
@@ -65,14 +66,15 @@ main {
 }
 .credit {
 	position: absolute;
-	bottom: 0.5rem;
+	bottom: 5rem;
 	font-size: 0.7rem;
 }
 p,
 .formHeader {
 	font-weight: bold;
 }
-a {
+.existingAccount > a,
+.credit > a {
 	appearance: none;
 	color: var(--forest-green);
 }
@@ -116,7 +118,7 @@ input {
 
 input:focus {
 	outline: none;
-	border-color: blue;
+	border-color: var(--forest-green);
 }
 
 input:invalid:focus {
@@ -171,4 +173,14 @@ span.errorMessage {
 	flex-direction: column;
 	text-align: center;
 	padding: var(--padding);
+}
+
+footer {
+	text-align: center;
+	padding: 10px;
+	color: white;
+	background-color: var(--forest-green);
+}
+footer > div > a {
+	color: white;
 }
